[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thunkmetrc"
version = "0.2.2"
description = "High-level ThunkMetrc Python SDK"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "thunkmetrc-wrapper==0.2.2",
    "python-dateutil>=2.8.2" # Useful for date handling if needed
]

[tool.hatch.build.targets.wheel]
packages = ["src/thunkmetrc"]
