[package]
name = "thunkmetrc"
version = "0.2.0"
edition = "2021"
description = "High-level generic Metrc SDK"

[dependencies]
thunkmetrc-wrapper = { path = "../wrapper", version = "0.2.0" }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
dotenv = "0.15"
