[package]
name = "thunkmetrc-wrapper"
version = "0.2.2"
edition = "2021"
description = "Type-safe wrapper for ThunkMetrc Rust client with rate limiting"
license = "MIT"
repository = "https://github.com/thunkmetrc/sdks"
keywords = ["thunkmetrc", "cannabis", "compliance", "api", "sdk"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
thunkmetrc-client = { path = "../client", version = "0.2.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
