[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thunkmetrc-wrapper"
version = "0.3.0"
description = "Type-safe wrapper for ThunkMetrc Python client"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "ThunkMetrc", email = "dev@thunkmetrc.com" },
]
dependencies = [
    "thunkmetrc-client==0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/thunkmetrc"]
