[package]
name = "thunkmetrc"
version = "0.3.1"
edition = "2021"
description = "High-level generic Metrc SDK"
license = "MIT"
repository = "https://github.com/thunkier/thunkmetrc/sdks"
keywords = ["thunkmetrc", "cannabis", "compliance", "api", "sdk"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
thunkmetrc-wrapper = { path = "../wrapper", version = "0.3.1" }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"

[dev-dependencies]
dotenv = "0.15"
