[package]
name = "thunkmetrc-wrapper"
version = "0.3.0"
edition = "2021"
description = "Type-safe wrapper for ThunkMetrc Rust client with rate limiting"
license = "MIT"
repository = "https://github.com/thunkier/thunkmetrc"
keywords = ["thunkmetrc", "cannabis", "compliance", "api", "sdk"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
thunkmetrc-client = { path = "../client", version = "0.3.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-stream = "0.3"
futures = "0.3"
futures-core = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
